src/styles/components/custom_select.scss
@import "../common/variable";
@import "../common/mixins";

  .custom-select {
    position: relative;
    width: 250px;
  }

  .select-label {
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    user-select: none;
    border: 1px solid var(--color-grey-700);
    padding: 0px 16px 0px 20px;
    min-width: 200px;
    height: 54px;
    background: var(--color-grey-800);
    color: white;
  }

  .count {
    margin-left: 10px;
    @include text-caption;
    color: white;
    display: none; /* hide by default */
    background: $primary-gradient;
    border-radius: 32px;
    padding: 2px 10px;
  }

  .arrow {
    margin-left: 10px;
    color: var(--color-grey-500);
    font-size: 18px;
    margin-bottom: 8px;
  }

  .dropdown {
    position: absolute;
    margin-top: 4px;
    top: 100%;
    left: 0;
    right: 0;
    overflow-y: auto;
    display: none;
    z-index: 100;
    box-shadow: 0 9px 28px 8px rgba(0, 0, 0, 0.05), 0 6px 16px 0 rgba(0, 0, 0, 0.08), 0 3px 6px -4px rgba(0, 0, 0, 0.12);
    background: var(--color-grey-800);
    padding: 0px 1px;
    min-width: 200px;
    max-height: 330px;
    @include bg-image;
  }

  .dropdown.open {
    display: block;
  }

  .dropdown-item {
    display: flex;
    align-items: center;
    cursor: pointer;
    user-select: none;
    border: none;
    padding: 11px 16px;
    min-height: 56px;
    background: var(--color-grey-900);
    color: var(--color-text-grey);

    @include text-body-small;

    &:hover {
      background: var(--color-white);
    }
  }

  /* castom checkbox */
  .checkbox-wrapper {
    position: relative;
    display: inline-block;
    width: 18px;
    height: 18px;
    margin-right: 16px;
  }

  .checkbox-wrapper input {
    opacity: 0;
    width: 0;
    height: 0;
    position: absolute;
  }

  .checkmark {
    position: absolute;
    top: 0; left: 0;
    width: 18px; height: 18px;
    border: 1px solid white;
    border-radius: 5px;
    background-color: transparent;
    transition: all 0.2s;
  }

  .checkbox-wrapper input:checked ~ .checkmark {
    background: $primary-gradient;
    border: none;
  }

  /* check mark */
  .checkmark:after {
    content: "";
    position: absolute;
    display: none;
    color: white;
  }

  .checkbox-wrapper input:checked ~ .checkmark:after {
    display: block;
    left: 5px;
    top: 1px;
    width: 8px;
    height: 10px;
    border: solid white;
    border-width: 0 2px 2px 0;
    transform: rotate(45deg);
    color: white;
  }

  label {
    flex: 1;
    cursor: pointer;
  }

